webapp/src/components/HomePage/HomePage.css
.HomePage {
  padding: 0px !important;
  margin-top: -var(--navbar-height);
}

.HomePage .hero-text,
.HomePage .hero-image {
  position: absolute;
  height: calc(100vh - 400px);
  top: calc(0px - var(--navbar-height));
  left: 0px;
  right: 0px;
}

.HomePage .hero-text {
  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  justify-content: center;
}

.HomePage .hero-text h1 {
  color: white;
}
.HomePage .hero-text p {
  color: var(--gray);
  margin-bottom: 30px;
}

.HomePage .hero-image {
  background-image: url('../../images/homepage.png');
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  opacity: 0.3;
  box-shadow: -20px -20px 41px 2px inset;
}

.HomePage .publications {
  padding-top: calc(100vh - 460px);
}

.HomePage .publications-header {
  display: flex;
  justify-content: space-between;
}

.HomePage .publications-header h3 {
  color: white;
}

.HomePage .publications-header [role='button'] {
  text-transform: uppercase;
  color: var(--red);
  font-size: smaller;
  cursor: pointer;
}

.HomePage .publications-scroller {
  display: flex;
  flex-flow: row nowrap;
  align-items: flex-start;
  overflow-x: scroll;
  height: 253px;
}

.HomePage .publications-scroller .ui.card:first-child {
  margin-top: 1em;
}

.HomePage .publications-scroller .Publication {
  flex: none;
  width: 224px !important;
  margin-right: 25px;
}

